--- a/repository/net/sourceforge/czt/maven-cup-plugin/index.html
+++ b/repository/net/sourceforge/czt/maven-cup-plugin/index.html
@@ -4,7 +4,7 @@
 <hr/>
 <pre>
 <a href="../">../</a>
-<a href="1.6-SNAPSHOT/">1.6-SNAPSHOT/</a>
+<a href="1.6.2/">1.6.2/</a>
 <a href="maven-metadata.xml">maven-metadata.xml</a>
 <a href="maven-metadata.xml.md5">maven-metadata.xml.md5</a>
 <a href="maven-metadata.xml.sha1">maven-metadata.xml.sha1</a>
